--- a/css/estilos.css
+++ b/css/estilos.css
@@ -121,6 +121,8 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     letter-spacing: 2px;
 }
+
+/**Boton Principal: Stylo1**/
 .slider a{
     padding: 10px 20px;
     background-color: black;
@@ -378,6 +380,134 @@ body{
 .reseñaPersona .imgPersona{
     border-radius: 50px;
 }
+
+/*SECCION FLYER*/
+.flyer{
+    width: 1400px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: solid 1px rgb(233, 232, 232);
+    display: flex;
+    align-items: center;
+    position: relative;
+    background-color: rgb(0, 0, 0); /* Fondo negro */
+    color: white; /* Ajusta el color del texto al fondo */
+    z-index: 1;
+    overflow: hidden; /* Asegura que la imagen no salga del contenedor */
+}
+
+.flyer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/bg_flyer.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.25;
+    z-index: -1; 
+    filter: grayscale(1);
+}
+
+/*Contenedor Imagen*/
+.flyerContenedorImg{
+    width: 100%;
+    text-align: center;
+}
+
+.flyerContenedorImg img{
+    max-width: 100%;
+}
+
+/*Contenedor Info*/
+.flyerContenedorInfo{
+    padding: 0% 4% 0px 8%;
+    margin: 0px 0px 0px -15%;
+}
+
+.flyerContenedorInfo h4{
+    border-left: solid 12px rgb(8, 231, 38);
+    padding-left: 10px;
+    font-size: 30px;
+    color: white;
+}
+
+.flyerContenedorInfo h2{
+    text-transform: uppercase;
+    margin: 10px 0;
+    font-size: 90px;
+    color: white;
+    line-height: 75px;
+}
+
+.flyerContenedorInfo .tituloColor{
+    color: #C930DB;
+}
+
+.flyerContenedorInfo h5{
+    color: white;
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: 100;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.flyerContenedorInfo .timer{
+    display: flex;
+    margin-bottom: 45px;
+}
+
+
+
+.flyerContenedorInfo .timerCirculos{
+    flex-direction: column;
+    width: 9%;
+    padding: 25px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    margin-right: 20px;
+}
+
+.flyerContenedorInfo .timerCirculos p{
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.flyerContenedorInfo .timerCirculos p.timerNummero{
+    font-size: 50px;
+    margin-bottom: -10px;
+}
+
+.flyerContenedorInfo .timerCirculos p {
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.flyerContenedorInfo a{
+    padding: 10px 20px;
+    background-color: rgb(8, 231, 38);
+    color: black;
+    border-radius: 15px;
+    border: solid 2px black;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    letter-spacing: 3px;
+}
+.flyerContenedorInfo a:hover{
+    /* background-color: rgb(240, 240, 240); */
+    background-color: #C930DB;
+    color: white;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
 
 /*Footer*/
 footer{
