--- a/css/estilos.css
+++ b/css/estilos.css
@@ -237,16 +237,23 @@ body{
     padding: 30px;
     margin: 0 10px;
     text-align: center;
+    transition: background-color 0.5s ease;
+}
+
+.categoriaItem:hover {
+    background-color: rgba(7, 7, 7, 0.3);
+    border: 2px solid black;
+    color: white;
+}
+
+.iconSVG {
+    fill: currentColor; /* SVG hereda el color de su contenedor */
+    width: 60px;
 }
 
 .categoriaItem:hover{
-    background-color: rgba(88, 87, 87, 0.3);
+    background-color: rgb(73, 73, 73);
     border: 2px solid black;
-}
-
-.categoriaItem img{
-    width: 40%;
-    margin-bottom: 10%;
 }
 
 /*Tarjeta Productos*/
@@ -364,13 +371,13 @@ body{
 .infoPersona {
     display: flex;
     align-items: center;
-    gap: 10px; /* espacio entre la imagen y el nombre */
+    gap: 10px; 
 }
 
 .detallesPersona {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* alinea el nombre y ocupación a la izquierda */
+    align-items: flex-start;
 }
 
 .reseñaPersona img{
@@ -432,6 +439,7 @@ body{
     padding-left: 10px;
     font-size: 30px;
     color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .flyerContenedorInfo h2{
