--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /*Estilos Principales*/
@@ -147,28 +148,30 @@ body{
 /*Seccion Productos del día*/
 /*Header Productos*/
 .productosDelDia,
-.masVendidos{
-    padding: 75px;
+.masVendidos,
+.nuestrosProductos{
+    padding: 75px 0;
     margin-left: auto;
     margin-right: auto;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     border-bottom: solid 1px rgb(233, 232, 232);
+    gap: 20px;
 }
 
 .productosDelDia header,
-.masVendidos header{
+.masVendidos header,
+.nuestrosProductos header{
     grid-column: 1/5;
-    display: grid;
-    grid-template-areas: 
-        "H4 H4"
-        "H2 nav";
+    display: flex;
+    justify-content: space-between;
 }
 
 .productosDelDia h2,
 .masVendidos h2,
 .categorias h2,
-.reseñasSeccion h2{
+.reseñasSeccion h2,
+.nuestrosProductos h2{
     grid-area: H2;
     text-transform: uppercase;
     margin: 10px 0;
@@ -178,7 +181,8 @@ body{
 .productosDelDia h4,
 .masVendidos h4,
 .categorias h4,
-.reseñasSeccion h4{
+.reseñasSeccion h4,
+.nuestrosProductos h4{
     border-left: solid 12px rgb(8, 231, 38);
     padding-left: 10px;
     align-self: center;
@@ -187,34 +191,38 @@ body{
 
 .productosDelDia nav,
 .masVendidos nav,
-.categorias nav{
-    grid-area: nav;
-    text-align: right;
+.categorias nav,
+.nuestrosProductos nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .productosDelDia nav a,
 .masVendidos nav a,
-.categorias nav a{
+.categorias nav a,
+.nuestrosProductos nav a{
+    width: 53%;
+    margin: 0 5px;
     text-decoration: none;
     background-color: rgb(233, 232, 232);
-    padding: 18px;
-    border-radius: 25px;
     text-align: center;
     font-size: 20px;
     font-weight: 500;
-    padding: 15px;
+    padding: 8px 14px;
     border-radius: 50px;
 }
 
 .productosDelDia nav a:hover,
 .masVendidos nav a:hover,
-.categorias nav a:hover{
+.categorias nav a:hover,
+.nuestrosProductos nav a:hover{
     background-color: rgba(143, 138, 138, 0.3)
 }
 
 /*Seccion Categorias*/
 .categorias{
-    padding: 75px;
+    padding: 75px 0;
     margin-left: auto;
     margin-right: auto;
     display: grid;
@@ -224,10 +232,8 @@ body{
 
 .categorias header{
     grid-column: 1/8;
-    display: grid;
-    grid-template-areas: 
-        "H4 H4"
-        "H2 nav";
+    display: flex;
+    justify-content: space-between;
 }
 
 .categoriaItem{
@@ -263,7 +269,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0 10px;
 }
 
 .cardProducto img{
@@ -326,7 +331,7 @@ body{
 
 /*RESEÑAS*/
 .reseñasSeccion{
-    padding: 75px;
+    padding: 75px 0;
     margin-left: auto;
     margin-right: auto;
     border-bottom: solid 1px rgb(233, 232, 232);
@@ -515,6 +520,7 @@ body{
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
+
 
 
 /*Footer*/
