--- a/css/estilos.css
+++ b/css/estilos.css
@@ -521,6 +521,73 @@ body{
     cursor: pointer;
 }
 
+/*SECCION ULTIMOS INGRESOS*/
+.flyerNuevosProductos1,
+.flyerNuevosProductos2,
+.flyerNuevosProductos3,
+.flyerNuevosProductos4{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+}
+
+.flyerNuevosProductos1 img,
+.flyerNuevosProductos2 img,
+.flyerNuevosProductos3 img,
+.flyerNuevosProductos4 img{
+    width: 100%;
+    overflow: hidden;
+}
+
+.infoTexto{
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
+    padding: 10px;
+}
+
+.infoTexto h3{
+    font-size: 1.9rem;
+    margin: 0;
+}
+
+.infoTexto p {
+    margin:10px 0;
+    font-size: 0.9rem;
+}
+
+.btnCarrito {
+    color: white;
+    text-decoration: none;
+    font-size: 0.9rem;
+    border: 1px solid white;
+    padding: 5px 10px;
+    border-radius: 4px;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.flyerNuevosProductos1{
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+}
+
+.flyerNuevosProductos2{
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+}
+
+.flyerNuevosProductos3{
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.flyerNuevosProductos4{
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+}
 
 
 /*Footer*/
