--- a/css/estilos.css
+++ b/css/estilos.css
@@ -476,8 +476,8 @@ body{
 
 .flyerContenedorInfo .timerCirculos{
     flex-direction: column;
-    width: 9%;
-    padding: 25px;
+    width: 11%;
+    padding: 12px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     display: flex;
@@ -488,17 +488,17 @@ body{
 }
 
 .flyerContenedorInfo .timerCirculos p{
-    font-size: 20px;
+    font-size: 0px;
     font-weight: 900;
 }
 
 .flyerContenedorInfo .timerCirculos p.timerNummero{
-    font-size: 50px;
+    font-size: 40px;
     margin-bottom: -10px;
 }
 
 .flyerContenedorInfo .timerCirculos p {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 900;
 }
 
@@ -569,6 +569,11 @@ body{
     display: inline-block;
 }
 
+.btnCarrito:hover {
+    background-color: rgb(8, 231, 38);
+    color: black;
+}
+
 .flyerNuevosProductos1{
     grid-column: 1 / 3;
     grid-row: 2 / 4;
@@ -610,23 +615,75 @@ body{
 footer{
     padding: 10px;
     font-size: 12px;
-    text-transform: uppercase;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: black;
     color: white;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.footerContenedor{
+.footerPrincipal{
     display: flex;
     justify-content: space-between;
-    width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
-
+    padding: 30px 0;
 }
 
-footer p > a{
+.footerPrincipal h3{
+    font-size: 2em;
+}
+
+.footerPrincipal p, a{
+    font-size: 1.5em;
+    margin-top: 10px;
+    display: block;
+    color: rgb(192, 192, 192);
+    text-decoration: none;
+}
+
+.footerPrincipal a:hover{
+    color: rgb(8, 231, 38);
+}
+
+.footerPrincipal input[type=text]{
+    margin-top: 20px;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    color: rgb(230, 230, 230);
+    border: 1px solid white;
+    padding: 0px 10px;
+}
+
+.col{
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.col5 img{
+    max-width: 85%;
+}
+
+.rrss{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/*Footer Copywrite*/
+.footerInferior{
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px 0px;
+    border-top: solid 1px rgb(87, 87, 87);
+}
+
+.footerInferior p > a{
     text-decoration: none;
     color: rgb(8, 231, 38);
+    display: inline;
+    font-size: 1em;
 }
