--- a/css/estilosProducto.css
+++ b/css/estilosProducto.css
@@ -1,5 +1,6 @@
 /*Breadcrumb*/
-.breadcrumb{
+.breadcrumb,
+.producto{
     padding: 75px 0;
     margin: auto;
 }
@@ -19,3 +20,273 @@
 }
 
 /*Producto*/
+/*Imagenes*/
+.producto{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+    padding: 0;
+}
+
+.imagenesProducto{
+    display: grid;
+    grid-template-columns: 25% 75%;
+    grid-template-rows: auto 5fr;
+    gap: 20px;
+}
+
+.imagenesProducto img{
+    width: 100%;
+}
+
+.imagenesProducto .imgThumbnail1{
+    grid-row: 1 / 2;
+}
+
+.imagenesProducto .imgThumbnail2{
+    grid-row: 2 / 3;
+}
+
+.imagenesProducto .imgThumbnail3{
+    grid-row: 3 / 4;
+}
+
+.imagenesProducto .imgThumbnail4{
+    grid-row: 4 / 5;
+}
+
+.imagenesProducto .imgPrincipal{
+    grid-row: 1 / 5;
+}
+
+/*Descripción*/
+.infoProducto{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.infoProducto .reseñaStock{
+    display: flex;
+    gap: 10px;
+}
+
+.infoProducto .reseñaStock .cantReview{
+    color: rgb(161, 161, 161);
+}
+
+.infoProducto .reseñaStock .stock{
+    color: rgb(7, 199, 33);
+}
+
+.infoProducto .precio .precioRegular{
+    font-size: 2em;
+}
+
+.infoProducto .descripcionCorta, .caracteristicas{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.infoProducto .descripcionCorta .caracteristicas ul{
+    padding-left: 30px;
+    padding-top: 10px;
+}
+
+.infoProducto .divider{
+    border-top: 1px solid rgb(151, 151, 151);
+}
+
+.accionesProducto {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.accionesProducto .selectorCantidad {
+    display: flex;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    overflow: hidden;
+    font-size: 1.2em;
+}
+
+.accionesProducto .selectorCantidad button {
+    background: none;
+    border: none;
+    padding: 8px;
+    cursor: pointer;
+    width: 30px;
+}
+
+.accionesProducto .cantidad {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    font-size: 1em;
+}
+
+.accionesProducto .comprar {
+    background-color: #e53935;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.25em;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.accionesProducto .wishlist {
+    background: none;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.accionesProducto .wishlist svg {
+    stroke: black;
+    width: 18px;
+    height: 18px;
+}
+
+.caracTienda{
+    display: flex;
+    padding: 25px;
+    border: 1px solid rgb(151, 151, 151);
+    border-radius: 10px;
+}
+
+.caracTienda .item{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.caracTienda .item img{
+    width: 20%;
+}
+
+/*Productos Relacionados*/
+.masVendidos{
+    padding: 75px 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    border-bottom: solid 1px rgb(233, 232, 232);
+    gap: 20px;
+}
+
+.masVendidos header{
+    grid-column: 1/5;
+    display: flex;
+    justify-content: space-between;
+}
+
+.masVendidos h2{
+    text-transform: uppercase;
+    margin-top: 10px;
+    font-size: 2em;
+}
+
+.masVendidos h4{
+    border-left: solid 12px rgb(8, 231, 38);
+    padding-left: 10px;
+    align-self: center;
+}
+
+.masVendidos nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.masVendidos nav a{
+    width: 53%;
+    margin: 0 5px;
+    text-decoration: none;
+    background-color: rgb(233, 232, 232);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 8px 14px;
+    border-radius: 50px;
+}
+
+.masVendidos nav a:hover{
+    background-color: rgba(143, 138, 138, 0.3)
+}
+
+/*Tarjeta Productos*/
+.cardProducto{
+    background-color: rgb(233, 232, 232);
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cardProducto img{
+    border-radius: 12px 12px 0 0;
+    width: 100%;
+}
+
+.cardProducto h3{
+    font-size: 1.2em;
+    padding: 10px 10px;
+}
+
+.cardProducto .productoDescripción{
+    padding: 0px 10px;
+}
+
+.cardProducto .precio{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 20px;
+    padding: 0 10px;
+}
+
+.cardProducto p.precioDescuento{
+    text-align: right;
+    font-weight: 600;
+    font-size: 1.2em;
+    color: rgb(8, 231, 38);
+    background-color: black;
+}
+
+.cardProducto p.precioRegular{
+    text-decoration: line-through;
+    color: tomato;
+    margin-right: 10px;
+    font-weight: 600;
+}
+
+.cardProducto a{
+    padding: 10px 20px;
+    margin: 20px 10px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 15px;
+    text-align: center;
+    border: solid 1px black;
+}
+
+.cardProducto a:hover{
+    background-color: rgb(8, 231, 38);
+    color: rgb(17, 17, 17);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    border: solid 1px black;
+}
