--- a/css/header.css
+++ b/css/header.css
@@ -70,7 +70,8 @@
 }
 
 /**Tablet**/
-@media (max-width: 768px){
+@media (min-width: 0px) and (max-width: 1100px) {
+/* @media (max-width: 768px){ */
     /*Header*/
     .logo{
         font-size: 1.2em;
@@ -81,7 +82,7 @@
 }
 
 /**Celulares**/
-@media (max-width: 425px){
+@media (max-width: 620px){
     /*Sección Menu Principal*/
         .logo{
             font-size: 1.2em;
