--- a/css/queriesNosotros.css
+++ b/css/queriesNosotros.css
@@ -25,7 +25,7 @@
     }
     .sectionContenedor.caracteristicas{
         grid-template-columns: repeat(2, 1fr);
-        padding: 0 0 75px 0;
+        padding: 0 20px 75px 20px;
         gap: 20px;
     }
     .caracteristicas > div.item{
