--- a/css/footer.css
+++ b/css/footer.css
@@ -65,6 +65,30 @@ footer{
     justify-content: center;
 }
 
+.mensajeSatisfactorio {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.7s ease-in-out, visibility 0.7s ease-in-out;
+    font-size: 1rem;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.mensajeSatisfactorio.mostrar {
+    opacity: 1;
+    visibility: visible;
+}
+
+.mensajeSatisfactorio.correcto {
+    color: rgb(8, 231, 38);
+}
+
+.mensajeSatisfactorio.error {
+    color: red;
+}
+
+
+
 /* Ícono del botón */
 .footerInputContainer .enviar img {
     width: 20px;
