--- a/css/estilosContacto.css
+++ b/css/estilosContacto.css
@@ -126,3 +126,10 @@ button:hover {
     background-color: black;
     color: white;
 }
+
+.disclaimer{
+    text-align: justify;
+    font-size: 0.8em;
+    font-family: 'Montserrat';
+    padding-top: 20px;
+}
