--- a/css/queriesHome.css
+++ b/css/queriesHome.css
@@ -27,6 +27,10 @@
 /*Tamaño del documento*/
     .sectionContenedor{
         width: 100%;
+        padding: 20px;
+    }
+    .sectionContenedor header nav{
+        display: none;
     }
 /*Padding del docuemnto*/
     .productosDelDia,
