--- a/css/estilosNosotros.css
+++ b/css/estilosNosotros.css
@@ -45,3 +45,45 @@
 .caracteristicas h3{
     font-size: 2em;
 }
+
+@media (min-width: 768px) and (max-width: 1700px) {
+    section.sectionContenedor.nosotros{
+        flex-direction: column;
+    }
+    
+    .sectionContenedor.caracteristicas{
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 0 75px 0;
+        gap: 20px;
+    }
+
+}
+
+
+@media (max-width: 768px) {
+    #header > div {
+        width: 100%;
+        padding: 20px;
+    }
+    section.sectionContenedor.nosotros{
+        flex-direction: column;
+    }
+    section.sectionContenedor.nosotros > div.img > img{
+        width: 100%;
+    }
+    .sectionContenedor.caracteristicas{
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 20px 75px 20px;
+        gap: 20px;
+    }
+    .caracteristicas > div.item{
+        padding: 20px;
+    }
+}
+
+@media (max-width: 425px){
+    .sectionContenedor {
+        padding: 20px;
+        width: 100%;
+    }
+}
