--- a/css/estilosLogin.css
+++ b/css/estilosLogin.css
@@ -23,13 +23,13 @@
     justify-content: center;
 }
 
-h2{
+.titulo{
     font-size: 1.5rem;
     color: #333;
     margin-bottom: 0.5rem;
 }
 
-p {
+.texto {
     color: #777;
     font-size: 0.9rem;
     margin-bottom: 1.5rem;
@@ -70,7 +70,7 @@ input:focus {
 }
 
 /* Google button styling */
-.btn-google {
+.btnGoogle {
     width: 100%;
     padding: 0.75rem;
     border: 1px solid #ccc;
@@ -86,7 +86,7 @@ input:focus {
     transition: background-color 0.3s ease;
 }
 
-.btn-google:hover {
+.btnGoogle:hover {
     background-color: #f0f0f0;
 }
 
@@ -97,19 +97,28 @@ input:focus {
     margin-top: 1rem;
 }
 
-.footer-text a {
+.footerTexto a {
     color: rgb(9, 155, 28);
     text-decoration: none;
 }
 
-.footer-text a:hover {
+.footerTexto a:hover {
     text-decoration: underline;
+}
+
+/**Pantalla 1024**/
+@media (max-width: 1024px){
+    .loginContenedor{
+        padding: 25px;
+    }
+    .loginContenedor .img{
+        max-width: 50%;
+    }
 }
 
 /**Tablet**/
 @media (max-width: 768px){
     .loginContenedor{
-        padding: 25px;
         flex-direction: column;
     }
     .loginContenedor .img{
