--- a/css/estilosCarrito.css
+++ b/css/estilosCarrito.css
@@ -85,6 +85,7 @@
 
 
 .contenedorTotales{
+    min-width: 265px;
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -105,10 +106,10 @@
 }
 
 .contenedorDescuento input[type=text]{
-    width: 70%;
+    width: 100%;
     height: 30px;
     padding: 0.75rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 0.9rem;
@@ -120,7 +121,7 @@ input[type=text]:focus {
 }
 
 .contenedorDescuento button{
-    width: 28%;
+    width: 100%;
     height: 30px;
     background-color: transparent;
     border: 1px solid #ccc;
@@ -187,4 +188,32 @@ input[type=text]:focus {
 .botones .checkout:hover{
     background: black;
     color: rgb(7, 199, 33);
+}
+
+/*MEDIAS QUERIES*/
+@media (max-width: 1000px){
+    .principal{
+        flex-direction: column;
+    }
+
+    .contenedorTotales{
+        width: 40%;
+        align-self: end;
+    }
+}
+
+/**Celulares**/
+@media (max-width: 425px){
+    .sectionContenedor,
+    .principal {
+        padding: 20px;
+        width: 100%;
+    }
+    .itemsCarrito{
+        flex-direction: column;
+        text-align: center;
+    }
+    .contenedorTotales{
+        width: 100%;
+    }
 }
