--- a/css/estilosProducto.css
+++ b/css/estilosProducto.css
@@ -105,7 +105,7 @@
     width: 30px;
 }
 
-.accionesProducto .cantidad {
+.accionesProducto .cantidadProducto {
     display: flex;
     align-items: center;
     justify-content: center;
