--- a/css/estilosCarrito.css
+++ b/css/estilosCarrito.css
@@ -36,7 +36,7 @@
     width: 30px;
 }
 
-.itemsCarrito .cantidad {
+.itemsCarrito .cantidadProducto {
     display: flex;
     align-items: center;
     justify-content: center;
