--- a/css/estilosHome.css
+++ b/css/estilosHome.css
@@ -198,6 +198,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: 0px 0px 12px grey;
 }
 
 .cardProducto img{
