Parametrización de funcion mostrarProductos para poder ser invocada desde diferentes páginas y controlar su comportamiento con parametros

--- a/css/estilosHome.css
+++ b/css/estilosHome.css
@@ -149,7 +149,9 @@
     background-color: rgba(143, 138, 138, 0.3)
 }
 
-.cardProductoOferta{
+.cardProductoOferta,
+.cardProductoMasVendido,
+.cardExploraProductos{
     display: contents;
 }
 
